# babytilly2

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: deploy.yaml
babytilly2/: settings.py  urls.py
commercial/: admin.py  apps.py  filters.py  models.py  views.py
commercial/migrations/: 0068_banner.py
templates/commercial/: articleprice_list.html
