[project]
name = "b2bcarrello"
version = "1.0.0"
description = "B2B carrello"
requires-python = ">=3.11,<3.12"
license = {file = "LICENSE.txt"}
keywords = ["egg", "bacon", "sausage", "tomatoes", "Lobster Thermidor"]
authors = [
  {email = "vitaly.omelchuk@gmail.com"},
  {name = "Vitalii Omelchuk"}
]
maintainers = [
  {name = "Vitalii Omelchuk", email = "vitaly.omelchuk@gmail.com"}
]
classifiers = [
  "Programming Language :: Python"
]
dependencies = [
    "boto3==1.38.38",
    "celery[redis]==5.4.0",
    "django-bootstrap4==23.4",
    "django-ckeditor==6.7.2",
    "django-countries==7.6.1",
    "django-debug-toolbar>=4,<6",
    "django-environ==0.12.0",
    "django-mptt==0.16.0",
    "django-ses==4.4.0",
    "django-storages==1.14.4",
    "django>=3.2,<4",
    "fontawesomefree==6.6.0",
    "gunicorn==23.0.0",
    "Pillow==11.1.0",
    "psycopg2-binary==2.9.10",
    "pycurl==7.45.4",
    "pymemcache==4.0.0",
    "pyuca==1.2",
    "sentry-sdk[django]==2.30.0",
    "sorl-thumbnail==12.10.0",
    "whitenoise",
]

[project.urls]
homepage = "https://b2bcarrello.com"
repository = "https://github.com/vitaly4uk/babytilly2"

[tool.pip-tools]
generate-hashes = false